// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders a .Note by default 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      replace={false}
      to="/note/undefined"
    >
      View note: 
    </Link>
  </h2>
  <div
    className="Note__dates"
  >
    <div
      className="Note__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        Invalid Date
      </span>
    </div>
  </div>
</div>
`;

exports[`Note component renders the Note given props 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      replace={false}
      to="/note/a"
    >
      View note: 
    </Link>
  </h2>
  <div
    className="Note__dates"
  >
    <div
      className="Note__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        15th Jan 2019
      </span>
    </div>
  </div>
</div>
`;
